# lang

./: Cargo.toml  code
src/: checker.rs  common.rs  expr.rs  func.rs  hoister.rs  ident.rs  infer.rs  join.rs  lexer.rs  main.rs  parser.rs  resolver.rs  scope.rs  span.rs  stmt.rs  type.rs  typed_ident.rs
src/checker/: case.rs  context.rs
src/common/: diagnostics.rs  expr.rs  func.rs  ident.rs  join.rs  scope.rs  span.rs  stmt.rs  type.rs  typed_ident.rs
src/infer/: engine.rs  mappings.rs  to_info.rs  type_info.rs
src/parser/: core.rs  expr.rs  macros.rs  stmt.rs  ty.rs  types.rs
src/parser/core/: expr.rs  ident.rs  ty.rs  ty_ident.rs
src/parser/stmt/: create.rs  declare.rs  func.rs  return.rs  set.rs
src/resolver/: mappings.rs  resolve.rs  resolve_data.rs  resolve_specific.rs
