[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
chumsky = "0.9.3"
codespan-reporting = "0.11.1"
derive_more = "0.99.17"
lazy_static = "1.4.0"
logos = "0.13.0"
regex = "1.10.2"
